--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -63,6 +63,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+     <script>
+      window.onload = function () {
+        window.location.href = "/minio/identity/openid/login";
+      }
+    </script>
     <div id="root">
       <div id="preload">
         <img src="./images/background.svg" />
